# ComfyUI-WBLESS

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml  publish_action.yml
core/: area_based_scale.py  deepseek_chat.py  gemini_chat.py  get_size.py  gradient.py  overlay_text.py  qwen_chat.py  switch.py
web/: preview.js
web/nodes/: overlay_text.js  qwen_chat.js  text_block.js
