[project]
name = "ComfyUI-WBLESS"
description = "ComfyUI custom node package. This custom node features multiple practical functions, including global variables, flow control, obtaining image or mask dimensions, and Dominant Axis Scale."
version = "2.2.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/LaoMaoBoss/ComfyUI-WBLESS"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "laomaoboss"
DisplayName = "ComfyUI-WBLESS"
Icon = ""
includes = []
