[project]
name = "ComfyUI-WBLESS"
description = "Nodes: Set Global Variable, Get Global Variable, Inversed Switch, Switch, Dominant Axis Scale, Area Based Scale, Area Based Scale (Pixel), Get Image Size, Get Mask Size, Overlay Text, Text Block, Gradient, ApplyMaskToAlpha, ImageHasAlpha."
version = "2.4.2"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/LaoMaoBoss/ComfyUI-WBLESS"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "laomaoboss"
DisplayName = "ComfyUI-WBLESS"
Icon = ""
includes = []









